--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,29 +2,29 @@
   text-align: center;
 }
 
-.App-logo {
+.Logo {
   height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+  .Logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
+.Header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  /* justify-content: center; */
+  font-size: 40px;
   color: white;
 }
 
-.App-link {
+.Link {
   color: #61dafb;
 }
 
