--- a/src/components/UI/Input/Input.module.css
+++ b/src/components/UI/Input/Input.module.css
@@ -24,3 +24,8 @@
     outline: none;
     background-color: #ccc;
 }
+
+.Invalid {
+     border: 1px solid red;
+     background-color: rgb(243, 124, 124);
+}
