--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -1,11 +1,12 @@
 .Burger {
     width: 100%;
-    margin: auto;
-    height: 250px;
+    margin: 20px 10vw 0 10vw;
+    height: auto;
     /* overflow: scroll; */
     text-align: center;
     font-weight: bold;
-    font-size: 1.2rem;
+    font-size: 1.4rem;
+    color: whitesmoke;
 }
 
 @media (min-width: 500px) and (min-height: 400px) {
