--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
@@ -6,7 +6,7 @@
 }
 
 .NavigationItem a {
-    color: #8F5C2C;
+    color: whitesmoke;
     text-decoration: none;
     width: 100%;
     box-sizing: border-box;
@@ -30,7 +30,7 @@
     }
     
     .NavigationItem a {
-        color: white;
+        color: whitesmoke;
         height: 100%;
         padding: 16px 10px;
         border-bottom: 4px solid transparent;
@@ -39,8 +39,8 @@
     .NavigationItem a:hover,
     .NavigationItem a:active,
     .NavigationItem a.active {
-        background-color: #8f5c2c;
+        color: whitesmoke;
         border-bottom: 4px solid #40a4c8;
-        color: white;
+        background-color: rgb(25, 25, 25);;
     }
 }
