--- a/src/components/Navigation/Toolbar/Toolbar.module.css
+++ b/src/components/Navigation/Toolbar/Toolbar.module.css
@@ -4,7 +4,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    background-color: #703B09;
+    background-color: rgb(20,20,20);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -18,7 +18,15 @@
     height: 100%;
 }
 
+.NavLink {
+    color: whitesmoke;
+    text-decoration: none;
+    margin: 0 5px 0 5px;
+    font-size: 2rem;
+}
+
 .Logo {
+    display: flex;
     height: 80%;
 }
 
