--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -1,6 +1,6 @@
 .Burger {
     width: 100%;
-    margin: 20px 10vw 0 10vw;
+    /* margin: 20px 10vw 0 10vw; */
     height: auto;
     /* overflow: scroll; */
     text-align: center;
