--- a/src/components/UI/Modal/Modal.module.css
+++ b/src/components/UI/Modal/Modal.module.css
@@ -1,7 +1,7 @@
 .Modal {
     position: fixed;
     z-index: 500;
-    background-color: white;
+    background-color: rgb(90, 90, 90);
     width: 70%;
     border: 1px solid #ccc;
     box-shadow: 1px 1px 1px black;
@@ -11,7 +11,10 @@
     box-sizing: border-box;
     transition: all 0.3s ease-out;
     text-align: left;
+    color: whitesmoke;
 }
+
+
 
 @media (min-width: 600px) {
     .Modal {
