Changed back to light theme

--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -3,7 +3,7 @@
     /* border: 1px solid black; */
     display: flex;
     height: calc(100vh - 56px);
-    background-color: rgb(30,30,30);
+    background-color: whitesmoke;
 
     width: 100%;
     justify-content: space-evenly;
