--- a/src/containers/Auth/Auth.module.css
+++ b/src/containers/Auth/Auth.module.css
@@ -1,8 +1,11 @@
 .Auth {
     margin: 20px auto;
     width: 80%;
+    height: min-content;
+    display: flex;
+    flex-direction: column;
     text-align: center;
-    box-shadow: 0 2px 3px #ccc;
+    box-shadow: 0px 5px 10px 1px rgba(0, 0, 0, 0.4);
     border: 1px solid #eee;
     padding: 10px;
     box-sizing: border-box;
