--- a/src/components/Burger/BuildControls/BuildControls.module.css
+++ b/src/components/Burger/BuildControls/BuildControls.module.css
@@ -7,6 +7,7 @@
     align-items: center;
     margin: 0;
     padding-bottom: 20px;
+    box-shadow: 0px 5px 10px 1px rgba(0, 0, 0, 0.4);
 }
  .BuildControls p {
      color: whitesmoke;
