--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -6,7 +6,7 @@
     text-align: center;
     font-weight: bold;
     font-size: 1.4rem;
-    color: whitesmoke;
+    color: black;
 }
 
 @media (min-width: 500px) and (min-height: 400px) {
