--- a/src/containers/Checkout/ContactData/ContactData.module.css
+++ b/src/containers/Checkout/ContactData/ContactData.module.css
@@ -4,12 +4,12 @@
     width: 100%;
     height: fit-content;
     text-align: center;
-    box-shadow: 0 2px 3px #ccc;
-    border: 1px solid #eee;
+    box-shadow: 0px 5px 10px 1px rgba(0, 0, 0, 0.4);
+    /* border: 1px solid #eee; */
     padding: 10px;
     box-sizing: border-box;
     color: whitesmoke;
-    background-color: rgb(75, 75, 75);
+    /* background-color: rgb(40,40,40); */
 
     /* width: auto;
     height: fit-content;
